# PublicPortfolio

./: README.md
SimulationFramework/: FILE_STRUCTURE.md  README.md  SETUP_LOCAL.md  deleteme.txt  main.py  pyproject.toml  requirements.txt  simulation_metrics.db
SimulationFramework/agents/: base.py  genome.py  random_agent.py  trivial_genome.py  wander_agent.py
SimulationFramework/cli/: main.py
SimulationFramework/configs/: example_batch.yaml  example_experiment.json  example_experiment.yaml  loader.py  plugin_example.yaml  wandering_agents_adv.yaml
SimulationFramework/core/: analytics.py  checkpointing.py  config_loader.py  deterministic_rng.py  event_bus.py  experiment_coordinator.py  experiment_manager.py  live_plugin_session.py  live_session.py  metrics_store.py  plugin_registry.py  render_state.py  replay.py  replay_loader.py  schema_validator.py  simulation_runner_api.py  simulator.py  stack_map.py
SimulationFramework/data/: checkpoint_store.py  logger.py
SimulationFramework/docs/: AGENT_BEHAVIOR_GUIDE.md  AUDIT_REPORT.md  CODE_REVIEW_SUMMARY.md  NEW_SIMULATION_DETAILED_GUIDE.md  PLUGIN_BEHAVIOR_GUIDE.md  STACK_BOUNDARIES.md  config_spec.md  experiment_manager_gui_architecture.md  rendering_architecture.md  replay_architecture.md
SimulationFramework/engine/: component_registry.py  minimal_slice.py  simulator.py
SimulationFramework/environment/: base.py  dummy.py  grid.py  wander.py
SimulationFramework/evolution/: base.py  ga.py  trivial.py
SimulationFramework/examples/: experiment_manifest.json
SimulationFramework/experiments/: metrics.sqlite  (+60 more)
(+72 files in other folders)
