[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evolution-simulation"
version = "0.1.0"
description = "Modular evolutionary simulation framework"
requires-python = ">=3.11"
dependencies = [
  "pyyaml>=6.0",
  "matplotlib>=3.7",
  "PySide6>=6.6",
  "pyqtgraph>=0.13",
  "websockets>=12.0"
]

[project.scripts]
evo = "cli.main:run_cli"
